Tools/DumpRenderTree/mac/LayoutTestControllerMac.mm
@@ -355,9 +355,68 @@ void LayoutTestController::notifyDone()
     m_waitToDump = false;
 }
 
-JSStringRef LayoutTestController::pathToLocalResource(JSContextRef context, JSStringRef url)
+static inline std::string stringFromJSString(JSStringRef jsString)
 {
-    return JSStringRetain(url); // Do nothing on mac.
+    size_t maxBufferSize = JSStringGetMaximumUTF8CStringSize(jsString);
+    char* utf8Buffer = new char[maxBufferSize];
+    size_t bytesWrittenToUTF8Buffer = JSStringGetUTF8CString(jsString, utf8Buffer, maxBufferSize);
+    std::string stdString(utf8Buffer, bytesWrittenToUTF8Buffer - 1); // bytesWrittenToUTF8Buffer includes a trailing \0 which std::string doesn't need.
+    delete[] utf8Buffer;
+    return stdString;
+}
+
+static inline size_t indexOfSeparatorAfterDirectoryName(const std::string& directoryName, const std::string& fullPath)
+{
+    std::string searchKey = "/" + directoryName + "/";
+    size_t indexOfSearchKeyStart = fullPath.rfind(searchKey);
+    if (indexOfSearchKeyStart == std::string::npos) {
+        ASSERT_NOT_REACHED();
+        return 0;
+    }
+    // Callers expect the return value not to end in "/", so searchKey.length() - 1.
+    return indexOfSearchKeyStart + searchKey.length() - 1;
+}
+
+static inline std::string resourceRootAbsolutePath(const std::string& testPathOrURL, const std::string& expectedRootName)
+{
+    char* localResourceRootEnv = getenv("LOCAL_RESOURCE_ROOT");
+    if (localResourceRootEnv)
+        return std::string(localResourceRootEnv);
+
+    // This fallback approach works for non-http tests and is useful
+    // in the case when we're running DRT directly from the command line.
+    return testPathOrURL.substr(0, indexOfSeparatorAfterDirectoryName(expectedRootName, testPathOrURL));
+}
+
+JSStringRef LayoutTestController::pathToLocalResource(JSContextRef context, JSStringRef localResourceJSString)
+{
+    // The passed in path will be an absolute path to the resource starting
+    // with "/tmp" or "/tmp/LayoutTests", optionally starting with the explicit file:// protocol.
+    // /tmp maps to DUMPRENDERTREE_TEMP, and /tmp/LayoutTests maps to LOCAL_RESOURCE_ROOT.
+    // FIXME: This code should work on all *nix platforms and can be moved into LayoutTestController.cpp.
+    std::string expectedRootName;
+    std::string absolutePathToResourceRoot;
+    std::string localResourceString = stringFromJSString(localResourceJSString);
+
+    if (localResourceString.find("LayoutTests") != std::string::npos) {
+        expectedRootName = "LayoutTests";
+        absolutePathToResourceRoot = resourceRootAbsolutePath(m_testPathOrURL, expectedRootName);
+    } else if (localResourceString.find("tmp") != std::string::npos) {
+        expectedRootName = "tmp";
+        absolutePathToResourceRoot = getenv("DUMPRENDERTREE_TEMP");
+    } else {
+        ASSERT_NOT_REACHED(); // pathToLocalResource was passed a path it doesn't know how to map.
+    }
+    ASSERT(!absolutePathToResourceRoot.empty());
+    size_t indexOfSeparatorAfterRootName = indexOfSeparatorAfterDirectoryName(expectedRootName, localResourceString);
+    std::string absolutePathToLocalResource = absolutePathToResourceRoot + localResourceString.substr(indexOfSeparatorAfterRootName);
+
+    // Note: It's important that we keep the file:// or http tests will get confused.
+    if (localResourceString.find("file://") != std::string::npos) {
+        ASSERT(absolutePathToLocalResource[0] == '/');
+        absolutePathToLocalResource = std::string("file://") + absolutePathToLocalResource;
+    }
+    return JSStringCreateWithUTF8CString(absolutePathToLocalResource.c_str());
 }
 
 void LayoutTestController::queueLoad(JSStringRef url, JSStringRef target)
